Fix text sizes on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,17 @@ h2 {
     font-size: 1.5em;
 }
 
+@media all and (max-width:768px) {
+    h1 {
+        font-size: 2.5em;
+        margin: 0.2em;
+    }
+
+    h2 {
+        font-size: 1.25em;
+    }
+}
+
 small {
     font-size: 0.4em;
 }
@@ -100,6 +111,12 @@ strong {
     margin: 10em auto 0 auto;
 }
 
+@media all and (max-width:768px) {
+    .logo {
+        max-width: 95%;
+        margin: 10em auto 0 auto;
+    }
+}
 
 .sponsor-gold img {
     height: 40vh;
